--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,9 @@
 .app {
     background-color: #8e8f92;
 }
+
+.app__flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
