--- a/src/container/About/About.module.css
+++ b/src/container/About/About.module.css
@@ -1,3 +1,26 @@
 .about {
     background-color: #f3cdfc;
+    height: 100vh;
+
+}
+
+.container {
+    height: 100vh;
+    width: 80%;
+    border: 1px solid;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.aboutText {
+    width: 320px;
+    background-color: #bab7b7;
+}
+
+.aboutPhoto {
+    width: 300px;
+    height: 400px;
+    background-color: #bab7b7;
 }
