--- a/src/container/Skills/Skills.module.css
+++ b/src/container/Skills/Skills.module.css
@@ -1,3 +1,24 @@
-.skills {
+.skillsBlock {
     background-color: #fafabb;
+    height: 100vh;
+}
+
+.skillsContainer {
+    height: 100vh;
+    width: 80%;
+    border: 1px solid;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.title {
+    background-color: #dbfccd;
+}
+
+.skills {
+    border: 1px solid;
+    width: 100%;
 }
