--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,6 @@
 .app {
-  background-color: #8e8f92;
+  background-color: var(--primary-color);
+  font-family: var(--font-base);
 }
 
 .app__flex {
@@ -16,5 +17,25 @@
 
   @media screen and (min-width: 2000px) {
     font-size: 1.75rem;
+  }
+}
+
+.head_text {
+  font-size: 2.75rem;
+  font-weight: 800;
+  text-align: center;
+  color: var(--black-color);
+  text-transform: capitalize;
+
+  span {
+    color: var(--secondary-color);
+  }
+
+  @media screen and (min-width: 2000px) {
+    font-size: 4rem;
+  }
+
+  @media screen and (max-width: 450px) {
+    font-size: 2rem;
   }
 }
