--- a/src/container/Header/Header.module.scss
+++ b/src/container/Header/Header.module.scss
@@ -34,7 +34,7 @@
       align-items: flex-end;
       flex-direction: column;
 
-      .badge_cmp, .tag_cmp .circle_cmp {
+      .badge_cmp, .tag_cmp {
         padding: 1rem 2rem;
         border: var(--white-color);
         border-radius: 15px;
