--- a/src/container/About/About.module.scss
+++ b/src/container/About/About.module.scss
@@ -1,27 +1,38 @@
-.about {
-    background-color: #f3cdfc;
-    height: 100vh;
-
+.app__about {
+    flex: 1;
+    width: 100%;
+    flex-direction: column;
 }
 
-.container {
-    height: 100vh;
-    width: 80%;
-    border: 1px solid;
-    margin: 0 auto;
+.app__profiles {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: flex-start;
     flex-wrap: wrap;
+    margin-top: 2rem;
 }
 
-.aboutText {
-    width: 320px;
-    background-color: #bab7b7;
-}
+.app__profile_item {
+    width: 190px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    margin: 2rem;
 
-.aboutPhoto {
-    width: 300px;
-    height: 400px;
-    background-color: #bab7b7;
+    img {
+        width: 100%;
+        height: 170px;
+        border-radius: 15px;
+        object-fit: cover;
+    }
+
+    @media screen and (min-width: 2000px) {
+        width: 370px;
+        margin: 2rem 4rem;
+
+        img {
+            height: 320px;
+        }
+    }
 }
