--- a/src/container/Header/Header.module.scss
+++ b/src/container/Header/Header.module.scss
@@ -80,11 +80,12 @@
     height: 100%;
 
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: flex-end;
     position: relative;
 
     .profile_img {
+      width: 70%;
       border-radius: 50%;
     }
 
