--- a/src/container/Contact/Contact.module.scss
+++ b/src/container/Contact/Contact.module.scss
@@ -1,40 +1,130 @@
-.contact {
-    background-color: #eecdfc;
-    min-height: 100vh;
-
-}
-
-.contactContainer {
-    min-height: 100vh;
-    width: 80%;
-    border: 1px solid;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+.app__contact {
+    flex: 1;
+    width: 100%;
     flex-direction: column;
+
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+    }
 }
 
-.title {
-    background-color: #8e8f92;
-}
-
-.form {
-    border: 1px solid;
-    width: 80%;
+.app__contact_cards {
+    width: 60%;
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
     flex-wrap: wrap;
+    margin: 4em 2rem 2rem;
 
+    .app__contact_card {
+        min-width: 290px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+
+        margin: 1rem 0;
+        padding: 1rem;
+        border-radius: 10px;
+        cursor: pointer;
+        background-color: #fef4f5;
+
+        transition: all 0.3s ease-in-out;
+
+        img {
+            width: 40px;
+            height: 40px;
+            margin: 0 0.7rem;
+        }
+
+        p {
+            font-weight: 500;
+        }
+        a {
+            text-decoration: none;
+            font-weight: 500;
+        }
+        &:hover {
+            box-shadow: 0 0 25px #fef4f5;
+        }
+
+        @media screen and (max-width: 450px) {
+            width: 100%;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
 }
 
-.textarea {
-    height: 50%;
-    width: 80%;
+.app__contact_cards .app__contact_card:last-child {
+    background-color: #f2f7fb;
 }
 
-.button {
-    margin-top: 20px;
+.app__contact_cards .app__contact_card:last-child:hover {
+    box-shadow: 0 0 25px #f2f7fb;
+}
+
+.app__contact_form {
+    width: 60%;
+    flex-direction: column;
+    margin: 1rem 2rem;
+
+    div {
+        width: 100%;
+
+        margin: 0.75rem 0;
+        border-radius: 10px;
+        cursor: pointer;
+        background-color: var(--primary-color);
+
+        transition: all 0.3s ease-in-out;
+
+        input,
+        textarea {
+            width: 100%;
+            padding: 0.95rem;
+            border: none;
+            border-radius: 7px;
+            background-color: var(--white-color);
+
+            font-family: var(--font-base);
+            color: var(--secondary-color);
+            outline: none;
+        }
+
+        textarea {
+            height: 170px;
+        }
+
+        &:hover {
+            box-shadow: 0 0 25px var(--primary-color);
+        }
+    }
+
+    button {
+        padding: 1rem 2rem;
+        border-radius: 10px;
+        border: none;
+        background-color: var(--secondary-color);
+
+        font-weight: 500;
+        color: var(--white-color);
+        outline: none;
+        margin: 2rem 0 0 0;
+        font-family: var(--font-base);
+
+        transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
+        cursor: pointer;
+
+        &:hover {
+            background-color: #2430af;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        width: 100%;
+        margin: 1rem 0;
+    }
 }
